--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,5 @@
 <%- include("header") -%>
-<%- include("basicNav") -%>
-
+<%- include("loginNav") -%>
 <div class="container">
   <div class="row align-items-center">
     <div class="col col-lg-6 my-auto">
@@ -9,7 +8,7 @@
         <div class="card-body">
           <h5 class="card-title">Tutors</h5>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor posuere velit, nec finibus sem sodales eget. Donec ac commodo diam. In eget ligula eget nisi venenatis eleifend. Cras quis metus leo. Mauris sit amet nulla est. Sed dictum sem leo, et convallis arcu pellentesque id. Curabitur et sem lorem. Aenean odio odio, ornare vel mattis ut</p>
-          <a href="/login" class="btn btn-primary">Login</a>
+          <a href="/tutors" class="btn btn-primary">Teach Now!</a>
         </div>
       </div>
     </div>
@@ -19,7 +18,7 @@
         <div class="card-body">
           <h5 class="card-title">Students</h5>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor posuere velit, nec finibus sem sodales eget. Donec ac commodo diam. In eget ligula eget nisi venenatis eleifend. Cras quis metus leo. Mauris sit amet nulla est. Sed dictum sem leo, et convallis arcu pellentesque id. Curabitur et sem lorem. Aenean odio odio, ornare vel mattis ut</p>
-          <a href="/register" class="btn btn-primary">Register</a>
+          <a href="/students" class="btn btn-primary">Book a Session!</a>
         </div>
       </div>
     </div>
