--- a/views/tutors.ejs
+++ b/views/tutors.ejs
@@ -1,4 +1,5 @@
 <%- include("header") -%>
+<%- include("loginNav") -%>
 
 <h1>tutors</h1>
 <div class="container">
@@ -65,7 +66,7 @@
     </fieldset>
 
 
-
+    <input type="hidden" name="tutorID" value="<%=tid%>">
     <button type="submit" class="btn btn-primary">Submit!</button>
   </form>
 </div>
