imlementation of alpha 0.1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,8 @@
   <div class="row align-items-center">
     <div class="col col-lg-6 my-auto">
       <div class="card" style="width: 70%; margin:auto;">
-        <img src="images/teacher.png" class="card-img-top index-pic" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Tutors</h5>
+          <h5 class="card-title">Welcome back</h5>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor posuere velit, nec finibus sem sodales eget. Donec ac commodo diam. In eget ligula eget nisi venenatis eleifend. Cras quis metus leo. Mauris sit amet nulla est. Sed dictum sem leo, et convallis arcu pellentesque id. Curabitur et sem lorem. Aenean odio odio, ornare vel mattis ut</p>
           <a href="/login" class="btn btn-primary">Login</a>
         </div>
@@ -15,9 +14,8 @@
     </div>
     <div class="col col-lg-6 my-auto">
       <div class="card" style="width: 70%;margin:auto;">
-        <img src="images/book.png" class="card-img-top index-pic" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Students</h5>
+          <h5 class="card-title">Start learning with us Today!</h5>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor posuere velit, nec finibus sem sodales eget. Donec ac commodo diam. In eget ligula eget nisi venenatis eleifend. Cras quis metus leo. Mauris sit amet nulla est. Sed dictum sem leo, et convallis arcu pellentesque id. Curabitur et sem lorem. Aenean odio odio, ornare vel mattis ut</p>
           <a href="/register" class="btn btn-primary">Register</a>
         </div>
@@ -25,14 +23,5 @@
     </div>
   </div>
 </div>
-
-<p class = "attribute">
-  Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-  <br>
-  Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-</p>
-
-
-
 
 <%- include("footer") -%>
