--- a/views/account.ejs
+++ b/views/account.ejs
@@ -3,29 +3,135 @@
 
 
 
-<div class="constiner">
+<div class="container">
   <h1>acocunt info</h1>
-  <%= accInfo %>
+  <p>UserName: <%= accInfo.email %></p>
+  <p>nick Name: <%= accInfo.nickName %></p>
+  <p>age: <%= accInfo.age %></p>
+  <p>gender: <%= accInfo.gender %></p>
+  <p>school: <%= accInfo.school %></p>
+  <p>credits: <%= accInfo.credits %></p>
+
+<a class="btn btn-primary" href="/update" role="button">Update you info now!</a>
+
 </div>
 <div class="container">
 
-<h1>jobs</h1>
-  <div class="card-group">
-    <% jobInfo.forEach(function(match){ %>
-      <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name PlaceHolder?</div>
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 ">Match details</h6>
-          <p class="card-text">Subject: <%=  match.subject %> </p>
-          <p class="card-text">Level: <%=  match.level %> </p>
-          <p class="card-text">Lesson Type: <%=  match.kind %> </p>
-          <p class="card-text">Date: <%=  match.date %> </p>
-          <p class="card-text">Time: <%=  match.time %> </p>
-          <a href="/students" class="btn btn-dark">Select</a>
-        </div>
+<h1>unmatched jobs</h1>
+<div class="card-group">
+  <% jobInfo.forEach(function(match){ %>
+    <div class="card text-white bg-warning  mb-3" style="width: 18rem;">
+      <div class="card-header ">Tutor Name <%=match.nickName%></div>
+      <div class="card-body">
+        <h6 class="card-subtitle mb-2 ">Match details</h6>
+        <p class="card-text">Subject: <%=  match.subject %> </p>
+        <p class="card-text">Level: <%=  match.level %> </p>
+        <p class="card-text">Lesson Type: <%=  match.kind %> </p>
+        <p class="card-text">Date: <%=  match.date %> </p>
+        <p class="card-text">Time: <%=  match.time %> </p>
       </div>
-    <%});%>
+    </div>
+  <%});%>
+</div>
+
+<h1>matched jobs</h1>
+<div class="card-group">
+  <% matchInfo.forEach(function(match){ %>
+    <div class="card text-white bg-success  mb-3" style="width: 18rem;">
+      <div class="card-header ">Tutor Name <%=match.nickName%></div>
+      <div class="card-body">
+        <h6 class="card-subtitle mb-2 ">Match details</h6>
+        <p class="card-text">Subject: <%=  match.subject %> </p>
+        <p class="card-text">Level: <%=  match.level %> </p>
+        <p class="card-text">Lesson Type: <%=  match.kind %> </p>
+        <p class="card-text">Date: <%=  match.date %> </p>
+        <p class="card-text">Time: <%=  match.time %> </p>
+      </div>
+    </div>
+  <%});%>
+</div>
+
+<h1>upcoming lessons</h1>
+<div class="card-group">
+  <% lessonInfo.forEach(function(match){ %>
+    <div class="card text-white bg-info  mb-3" style="width: 18rem;">
+      <div class="card-header ">Tutor Name <%=match.nickName%></div>
+      <div class="card-body">
+        <h6 class="card-subtitle mb-2 ">Match details</h6>
+        <p class="card-text">Subject: <%=  match.subject %> </p>
+        <p class="card-text">Level: <%=  match.level %> </p>
+        <p class="card-text">Lesson Type: <%=  match.kind %> </p>
+        <p class="card-text">Date: <%=  match.date %> </p>
+        <p class="card-text">Time: <%=  match.time %> </p>
+      </div>
+    </div>
+  <%});%>
+</div>
+
+  <h1>new jobs</h1>
+
+  <% const arrayLength = jobInfo.length %>
+
+  <h2>you have <%= arrayLength%> jobs</h2>
+
+
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+
+  <div class="carousel-inner">
+<%if(arrayLength!=0){ %>
+  <div class="carousel-item active">
+    <div class="card text-white bg-success  mb-3" style="width: 18rem;">
+      <div class="card-header ">Tutor Name <%=jobInfo[0].tutorID%></div>
+      <div class="card-body">
+        <h6 class="card-subtitle mb-2 ">Match details</h6>
+        <p class="card-text">Subject: <%=  jobInfo[0].subject %> </p>
+        <p class="card-text">Level: <%=  jobInfo[0].level %> </p>
+        <p class="card-text">Lesson Type: <%=  jobInfo[0].kind %> </p>
+        <p class="card-text">Date: <%=  jobInfo[0].date %> </p>
+        <p class="card-text">Time: <%=  jobInfo[0].time %> </p>
+        <a href="/students" class="btn btn-dark">Select</a>
+      </div>
+    </div>
+
+
   </div>
+<%} %>
+
+
+<% var newJob; %>
+<% var i; %>
+<%if(arrayLength>=2){ %>
+<% for(i = 1;i<arrayLength;i++){ %>
+  <% newJob = jobInfo[i]; %>
+  <div class="carousel-item">
+    <div class="card text-white bg-success  mb-3" style="width: 18rem;">
+      <div class="card-header ">Tutor Name <%=newJob.tutorID%></div>
+      <div class="card-body">
+        <h6 class="card-subtitle mb-2 ">Match details</h6>
+        <p class="card-text">Subject: <%=  newJob.subject %> </p>
+        <p class="card-text">Level: <%=  newJob.level %> </p>
+        <p class="card-text">Lesson Type: <%=  newJob.kind %> </p>
+        <p class="card-text">Date: <%=  newJob.date %> </p>
+        <p class="card-text">Time: <%=  newJob.time %> </p>
+        <a href="/students" class="btn btn-dark">Select</a>
+      </div>
+    </div>
+
+  </div>
+<%}} %>
+
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
 
 </div>
 
