--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,8 @@
           <!-- Makes POST request to /login route -->
           <form action="/login" method="POST">
             <div class="form-group">
-              <label for="text">Email</label>
-              <input type="text" class="form-control" name="username">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" name="username">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
