--- a/views/studentsResult.ejs
+++ b/views/studentsResult.ejs
@@ -8,7 +8,7 @@
   <div class="card-group">
     <% perfectList.forEach(function(match){ %>
       <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name PlaceHolder?</div>
+        <div class="card-header ">Tutor Name <%=  match.nickName %></div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 ">Match details</h6>
           <p class="card-text">Subject: <%=  match.subject %> </p>
@@ -16,7 +16,11 @@
           <p class="card-text">Lesson Type: <%=  match.kind %> </p>
           <p class="card-text">Date: <%=  match.date %> </p>
           <p class="card-text">Time: <%=  match.time %> </p>
-          <a href="/students" class="btn btn-dark">Select</a>
+          <form action="/view" method="post">
+            <input type="hidden" name="selectedID" value="<%=  match._id%>">
+            <input class="btn btn-dark" type="submit" value="view info">
+          </form>
+
         </div>
       </div>
     <%});%>
@@ -26,7 +30,7 @@
   <div class="card-group">
     <% sameDateList.forEach(function(match){ %>
       <div class="card text-white bg-primary mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name PlaceHolder?</div>
+        <div class="card-header ">Tutor Name <%=  match.nickName %></div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 ">Match details</h6>
           <p class="card-text">Subject: <%=  match.subject %> </p>
@@ -34,7 +38,10 @@
           <p class="card-text">Lesson Type: <%=  match.kind %> </p>
           <p class="card-text">Date: <%=  match.date %> </p>
           <p class="card-text">Time: <%=  match.time %> </p>
-          <a href="/students" class="btn btn-dark">Select</a>
+          <form action="/view" method="post">
+            <input type="hidden" name="selectedID" value="<%=  match._id%>">
+            <input class="btn btn-dark" type="submit" value="view info">
+          </form>
         </div>
       </div>
     <%});%>
@@ -44,7 +51,7 @@
   <div class="card-group">
     <% sameTimeList.forEach(function(match){ %>
       <div class="card text-white bg-info mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name PlaceHolder?</div>
+        <div class="card-header ">Tutor Name <%=  match.nickName %></div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 ">Match details</h6>
           <p class="card-text">Subject: <%=  match.subject %> </p>
@@ -52,7 +59,10 @@
           <p class="card-text">Lesson Type: <%=  match.kind %> </p>
           <p class="card-text">Date: <%=  match.date %> </p>
           <p class="card-text">Time: <%=  match.time %> </p>
-          <a href="/students" class="btn btn-dark">Select</a>
+          <form action="/view" method="post">
+            <input type="hidden" name="selectedID" value="<%=  match._id%>">
+            <input class="btn btn-dark" type="submit" value="view info">
+          </form>
         </div>
       </div>
     <%});%>
