implemented notification and p2p credit transfer, tutor nickname bug fixed

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -21,7 +21,7 @@
 <div class="card-group">
   <% jobInfo.forEach(function(match){ %>
     <div class="card text-white bg-warning  mb-3" style="width: 18rem;">
-      <div class="card-header ">Tutor Name <%=match.nickName%></div>
+      <div class="card-header ">Tutor Name <%=match.tutorNickName%></div>
       <div class="card-body">
         <h6 class="card-subtitle mb-2 ">Match details</h6>
         <p class="card-text">Subject: <%=  match.subject %> </p>
@@ -38,7 +38,7 @@
 <div class="card-group">
   <% matchInfo.forEach(function(match){ %>
     <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-      <div class="card-header ">Tutor Name <%=match.nickName%></div>
+      <div class="card-header ">Tutor Name <%=match.tutorNickName%></div>
       <div class="card-body">
         <h6 class="card-subtitle mb-2 ">Match details</h6>
         <p class="card-text">Subject: <%=  match.subject %> </p>
@@ -55,7 +55,7 @@
 <div class="card-group">
   <% lessonInfo.forEach(function(match){ %>
     <div class="card text-white bg-info  mb-3" style="width: 18rem;">
-      <div class="card-header ">Tutor Name <%=match.nickName%></div>
+      <div class="card-header ">Tutor Name <%=match.tutorNickName%></div>
       <div class="card-body">
         <h6 class="card-subtitle mb-2 ">Match details</h6>
         <p class="card-text">Subject: <%=  match.subject %> </p>
