--- a/views/studentsResult.ejs
+++ b/views/studentsResult.ejs
@@ -8,7 +8,7 @@
   <div class="card-group">
     <% perfectList.forEach(function(match){ %>
       <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name <%=  match.nickName %></div>
+        <div class="card-header ">Tutor Name <%=  match.tutorNickName %></div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 ">Match details</h6>
           <p class="card-text">Subject: <%=  match.subject %> </p>
@@ -30,7 +30,7 @@
   <div class="card-group">
     <% sameDateList.forEach(function(match){ %>
       <div class="card text-white bg-primary mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name <%=  match.nickName %></div>
+        <div class="card-header ">Tutor Name <%=  match.tutorNickName %></div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 ">Match details</h6>
           <p class="card-text">Subject: <%=  match.subject %> </p>
@@ -51,7 +51,7 @@
   <div class="card-group">
     <% sameTimeList.forEach(function(match){ %>
       <div class="card text-white bg-info mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name <%=  match.nickName %></div>
+        <div class="card-header ">Tutor Name <%=  match.tutorNickName %></div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 ">Match details</h6>
           <p class="card-text">Subject: <%=  match.subject %> </p>
