--- a/views/view.ejs
+++ b/views/view.ejs
@@ -8,7 +8,7 @@
   <div class="card-group">
 
       <div class="card text-white bg-success  mb-3" style="width: 18rem;">
-        <div class="card-header ">Tutor Name <%=  match.tutorID %></div>
+        <div class="card-header ">Tutor Name <%=  match.tutorNickName %></div>
         <div class="card-body">
           <h6 class="card-subtitle mb-2 ">Match details</h6>
           <p class="card-text">Subject: <%=  match.subject %> </p>
