--- a/views/loginNav.ejs
+++ b/views/loginNav.ejs
@@ -13,8 +13,12 @@
             <a class="nav-link" href="/home">dashboard </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/buyCredits">Buy Credits!</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/logout">logout</a>
           </li>
+
 
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
