--- a/views/buyCredits.ejs
+++ b/views/buyCredits.ejs
@@ -16,14 +16,14 @@
 
 <body>
 
-<%- include("loginNav") -%>
+<%- include("basicNav") -%>
 
 
 <h1>buy credits </h1>
 <div class="container">
   <div class="card-group">
 
-    <div class="card" style="width: 18rem;">
+    <div class="card index-card" style="width: 18rem;">
       <img src="..." class="card-img-top" alt="credits">
       <div class="card-body" data-item-id="1">
         <span class="card-title">10 Credits</span>
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card index-card" style="width: 18rem;">
       <img src="..." class="card-img-top" alt="credits">
       <div class="card-body" data-item-id="2">
         <span class="card-title">20 Credits</span>
