--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
   <title>Alpha build</title>
 
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
