--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <%- include("basicNav") -%>
 
 <div class="container">
-  <div class="row align-items-center">
+  <!-- <div class="row align-items-center">
     <div class="col col-lg-6 my-auto">
       <div class="card" style="width: 70%; margin:auto;">
         <div class="card-body">
@@ -21,7 +21,57 @@
         </div>
       </div>
     </div>
+  </div> -->
+<div class="row">
+  <div class="col-12">
+      <img src="images/phindex.jpg" alt="learning picture">
   </div>
+</div>
+
+
+<!-- <div class="row justify-content-center">
+  <div class="col-4">
+      One of two columns
+  </div>
+  <div class="col-4">
+      One of two columns
+  </div>
+  <div class="col-4">
+      One of two columns
+  </div>
+</div> -->
+
+
+<div class="row justify-content-center align-items-start">
+  <div class="col col-lg-4">
+    <div class="card index-card">
+      <div class="card-body">
+        <h5 class="card-title">Details</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor posuere velit, nec finibus sem sodales eget. Donec ac commodo diam. In eget ligula eget nisi venenatis eleifend. Cras quis metus leo. Mauris sit amet nulla est. Sed dictum sem leo, et convallis arcu pellentesque id. Curabitur et sem lorem. Aenean odio odio, ornare vel mattis ut</p>
+
+      </div>
+    </div>
+  </div>
+  <div class="col col-lg-4">
+    <div class="card index-card" style="margin:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Call To Action</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  sodales eget. Donec ac commodo diam. In eget ligula eget nisi venenatis eleifend. Cras quis metus leo. Mauris sit amet nulla est. Sed dictum sem leo, et convallis arcu pellentesque id. Curabitur et sem lorem. Aenean odio odio, ornare vel mattis ut</p>
+        <a href="/registerEmail" class="btn btn-primary">Register Now!</a>
+        <a href="/login" class="btn btn-primary">Login</a>
+      </div>
+    </div>
+  </div>
+  <div class="col col-lg-4 ">
+    <div class="card index-card" style="margin:auto;">
+      <div class="card-body">
+        <h5 class="card-title">Sales Pitch</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor posuere velit, nec finibus sem sodales eget. Donec ac commodo diam. In eget ligula eget nisi venenatis eleifend. Cras quis metus leo. Mauris sit amet nulla est. Sed dictum sem leo, et convallis arcu pellentesque id. Curabitur et sem lorem. Aenean odio odio, ornare vel mattis ut</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 </div>
 
 <%- include("footer") -%>
