--- a/views/loginNav.ejs
+++ b/views/loginNav.ejs
@@ -19,6 +19,9 @@
             <a class="nav-link" href="/logout">logout</a>
           </li>
 
+          <span class="navbar-text balance">
+            Account Balance: <%=balance%>
+        </span>
 
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
