--- a/views/review.ejs
+++ b/views/review.ejs
@@ -1,7 +1,7 @@
 <%- include("header") -%>
-<%- include("loginNav") -%>
+<%- include("basicNav") -%>
 
-<h1>Review for: <%=revieweeID%></h1>
+<h1>Review for: <%=revieweeName%></h1>
 <div class="container">
   <form class="" action="/newReview" method="post">
     <fieldset>
