--- a/views/basicNavUpdate.ejs
+++ b/views/basicNavUpdate.ejs
@@ -33,8 +33,8 @@
 
 </div> -->
 <nav class="navbar navbar-expand-lg my_nav">
-  <a href="/" class="navbar-brand d-flex align-items-center">
-    <img src="/images/logo1.png" alt="edudaddy logo" style= >
+  <a href="/home" class="navbar-brand d-flex align-items-center">
+    <img src="images/logo1.png" alt="edudaddy logo" style= >
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -45,12 +45,12 @@
       <li class="nav-item">
         <a class="nav-link" href="/home">Dashboard</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="/profile">Account</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="/buyCredits">Credits:<%=balance%></a>
-      </li>
+      </li> -->
     </ul>
 
   </div>
