--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,8 +6,11 @@
 
   <div class="row">
     <div class="col-sm-8">
-      <div class="card">
+      <div class="card index-card">
         <div class="card-body">
+          <% if(retry){%>
+            <p>Invalid attempt, please try again</p>
+          <%}%>
 
           <!-- Makes POST request to /login route -->
           <form action="/login" method="POST">
@@ -19,7 +22,7 @@
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password">
             </div>
-            <button type="submit" class="btn btn-dark">Login</button>
+            <button type="submit" class="btn btn-primary">Login</button>
           </form>
 
         </div>
